# pacman-like

./: .clang-format  .gitignore  CMakeLists.txt  Map.txt  Map1.txt  README.md  build.sh
include/: client_connection.h  my_types.h  pacman.h  serializer.h  server_connection.h  ui.h
src/: client_connection.cpp  main.cpp  pacman.cpp  serializer.cpp  server.cpp  server_connection.cpp  ui.cpp
